<resources>
    <string name="app_name">MyCrypto</string>
    <string name="welcome">Bem vindo ao MyCrypto</string>
    <string name="login_desc">Cadastre-se ou Faça Login para entrar!</string>
    <string name="welcome_desc">Escolha o que deseja fazer através dos botões.</string>
    <string name="btn_back">Voltar</string>
    <string name="btn_login">Login</string>
    <string name="btn_cadastro">Cadastrar</string>
    <string name="email_input">Email</string>
    <string name="password_input">Senha</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_moedas">Analisar as Moedas</string>
    <string name="btn_trending">Ver Moedas em alta</string>
    <string name="btn_busca_trending">Descobrir</string>
    <string name="btn_tracker">Adicionar moedas para acompanhar</string>
    <string name="btn_calcular">Calcular</string>
    <string name="btn_acompanhar">Acompanhar</string>
    <string name="trendingText">Aqui estão as 7 moedas mais pesquisadas na ultimas 24h no site da Coingecko!</string>
    <string name="trendingSubText">clique on botão abaixo para descobrir</string>
    <string name="user">Usuário</string>
    <string name="name">Nome</string>
    <string name="id">Id</string>
    <string name="email">E-Mail</string>
    <string name="btn_search_coins">Ver Moedas</string>
    <string name="btn_user_details">Detalhes</string>
    <string name="simboloTv">Simbolo: </string>
    <string name="nameTv">Nome: </string>
    <string name="precoTv">Preço: </string>
    <string name="altPrecoTv">Alteração de Preço 24h: </string>
    <string name="athTv">Preço mais alto: </string>
    <string name="atlTv">Preço mais baixo: </string>
    <string name="mktCapTv">Market Cap Posição: </string>
    <string name="mktCapValueTv">Market Cap: </string>
    <string name="TFhighTv">Preço mais alto 24h: </string>
    <string name="TFlowTv">Preço mais baixo 24h: </string>
    <string name="coinName">Nome</string>
    <string name="coinSymbol">Simbolo</string>
    <string name="coinPrice">Preço</string>
    <string name="coinPriceBtc">Preço em BTC</string>
    <string name="coinMktCap">Mkt Cap Posição</string>
    <string name="valorDinheiro">Valor em Reais</string>
    <string name="valorMoeda">Quantas moedas você consegue comprar</string>
    <string name="zero">0</string>
    <string name="salvar">Salvar Anotação</string>
    <string name="mostrar">Mostrar Anotação</string>
    <string name="acompanhar">Anote o preço ou algum outro detalhe de uma Moeda que voce queira acompanhar</string>
</resources>